--- a/_config.yml
+++ b/_config.yml
@@ -92,6 +92,10 @@ post_survey: "https://carpentries.typeform.com/to/UgVdRQ?slug="
 # Start time in minutes (0 to be clock-independent, 540 to show a start at 09:00 am).
 start_time: 0
 
+# List the extras we want links from the navbar drop-down
+extras_order:
+  - resources
+
 # Specify that things in the episodes collection should be output.
 collections:
   episodes:
